# ChangeLog for dev-ruby/macaddr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*macaddr-1.6.1 (22 Jan 2013)

  22 Jan 2013; Hans de Graaff <graaff@gentoo.org> +macaddr-1.6.1.ebuild,
  +metadata.xml:
  Initial import.
