@@ -1,1 +1,2 @@
 DIST macaddr-1.6.1.gem 10240 SHA256 901dcf67341597418007f85d837fc3bdbf9fb90948f960f3c01a300a5aa0a9ed SHA512 4cd793084dada2e5e9139690ea7dddee2c70b909399583a23c4369dc2c81dc3835e7f0c88288761844dcc274e1260b943e45b6d00362a238e9cfceead25d9bd8 WHIRLPOOL 95d90c273ba17cc6d467ac47b153f231f2e1e7a86bfbb20142c483ca923a39049c670a482071adf39e3da67302ae067e1223fd797d9486ec79f18a4abbe1f4bf
+DIST macaddr-1.6.5.gem 11264 SHA256 3311b71084c188b4751f93ebaaa55211a196b66e4fcad5abaf7eada44fbe784e SHA512 329da5d46984bf3207b95a8d8efd142e456442ce7ff947627dada285990dfb7f100e4dc3c04941772cb73eb02545fe5f511a96d9bcdc6788dc24b23238aace9d WHIRLPOOL e0e5f7ea213c15f689aa4cf266107792e69cc0e553e2e38675234e759e2064da4ea41e4ce744f7c47370a2bb574942bb71e243402f933dcbf48d28e54312cd78
